ci: download binaries first

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Download binaries
+        run: bash ./scripts/download-binaries.sh
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
