--- a/Groth16.Net/Groth16.Net.csproj
+++ b/Groth16.Net/Groth16.Net.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="..\version.props" />
+    <Import Project="..\version.props"/>
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
@@ -12,19 +12,13 @@
         </None>
     </ItemGroup>
 
-
     <ItemGroup>
-        <PackageReference Include="Google.Protobuf" Version="3.23.3" />
+        <Folder Include="native\linux-x64\"/>
+        <Folder Include="native\linux-arm64\"/>
+        <Folder Include="native\osx-arm64\"/>
+        <Folder Include="native\osx-x64\"/>
+        <Folder Include="native\win-x64\"/>
     </ItemGroup>
-
-
-    <ItemGroup>
-      <Folder Include="native\linux-x64\" />
-      <Folder Include="native\osx-arm64\" />
-    </ItemGroup>
-    <Target Name="PrintBinaries" AfterTargets="AfterBuild">
-        <Message Text="Binaries = @(NativeBinary)" />
-    </Target>
     <Target Name="PackTaskDependencies" BeforeTargets="GenerateNuspec">
         <ItemGroup>
             <_PackageFiles Include="$(OutputPath)/native/**/*">
@@ -35,10 +29,4 @@
             </_PackageFiles>
         </ItemGroup>
     </Target>
-<!--    <ItemGroup>-->
-<!--        <_PackageFiles Include="Solang.Net.targets">-->
-<!--            <BuildAction>None</BuildAction>-->
-<!--            <PackagePath>build/</PackagePath>-->
-<!--        </_PackageFiles>-->
-<!--    </ItemGroup>-->
 </Project>
