add download binaries step in github action

--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           lfs: true
 
+      - name: Download binaries
+        run: |
+          bash ${{github.workspace}}/scripts/download-binaries.sh
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
