Set PackageCopyToOutput to true

--- a/Groth16.Net/Groth16.Net.csproj
+++ b/Groth16.Net/Groth16.Net.csproj
@@ -24,8 +24,8 @@
             <_PackageFiles Include="$(OutputPath)/native/**/*">
                 <BuildAction>Content</BuildAction>
                 <PackagePath>content/native/</PackagePath>
-                <!--<CopyToOutput>true</CopyToOutput>-->
-                <!--<PackageCopyToOutput>true</PackageCopyToOutput>-->
+                <CopyToOutput>true</CopyToOutput>
+                <PackageCopyToOutput>true</PackageCopyToOutput>
             </_PackageFiles>
         </ItemGroup>
     </Target>
