--- a/version.props
+++ b/version.props
@@ -1,5 +1,5 @@
 <Project>
     <PropertyGroup>
-        <Version>1.0.0-alpha.2  s</Version>
+        <Version>1.0.0-alpha.2</Version>
     </PropertyGroup>
 </Project>
